Modified FileUtils methods to handle duplicate items and categories. Implemented sorting for items in stores. Reformatted code to make it more readable.